--- a/views/admin/layout/meta/page_count.ejs
+++ b/views/admin/layout/meta/page_count.ejs
@@ -4,13 +4,13 @@
     <div class="col-1"></div>
 
     <div class="col-5 relative">
-      <p class="text-center akrobat font-30"> Total Page Count </p>
+      <p class="text-center akrobat font-30"> Unique Page Count </p>
       <p class="text-center akrobat font-30"> <%= meta.views.total_views %> </p>
     </div>
 
     <div class="col-5 relative">
-      <p class="text-center  akrobat font-30"> Unique Visitors </p>
-      <p class="text-center  akrobat font-30"> <%= meta.views.unique_views %> </p>
+      <p class="text-center  akrobat font-30"> Total Page Count </p>
+      <p class="text-center  akrobat font-30"> <%= meta.views.unique_views + 2 %> </p>
     </div>
 
 </div>
