--- a/views/admin/layout/quotes/quote.ejs
+++ b/views/admin/layout/quotes/quote.ejs
@@ -15,19 +15,18 @@
               </div>
 
               <div class="col-6">
-                <p class="list_item_name font-16 akrobat"> Small (qty) : <%= quote.windows[0].total_windows %></p>
+                <p class="list_item_name font-16 akrobat"> Small (qty) : <%= quote.new_sizes[0].count %></p>
               </div>
 
               <div class="col-6">
-                <p class="list_item_name font-16 akrobat"> Medium (qty): <%= quote.windows[1].total_windows %></p>
+                <p class="list_item_name font-16 akrobat"> Medium (qty): <%= quote.new_sizes[1].count %></p>
               </div>
 
               <div class="col-6">
-                <p class="list_item_name font-16 akrobat"> Large (qty): <%= quote.windows[2].total_windows %></p>
+                <p class="list_item_name font-16 akrobat"> Large (qty): <%= quote.new_sizes[2].count %></p>
               </div>
-
               <div class="col-12">
-                <p class="list_item_name font-18 akrobat"> Screens (qty): <%= quote.windows[3].total_windows %></p>
+                <p class="list_item_name font-18 akrobat"> Screens (qty): <%= quote.new_sizes[3].count %></p>
               </div>
 
               <div class="col-6">
