--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -15,7 +15,7 @@
 
       <%- include("./layout/contact/meet_the_owners.ejs") %>
       <div class="our_clients_contact_wrapper">
-        <%- include("./layout/out_clients.ejs") %>
+        <%- include("./layout/our_clients.ejs") %>
       </div>
 
       <%- include("./layout/contact/what_we_do.ejs") %>
