--- a/views/user/layout/about/values.ejs
+++ b/views/user/layout/about/values.ejs
@@ -1,60 +1,96 @@
 
-    <div class="row background-white mobile-padding-top-bottom-2_5 padding-top-bottom-2_5 value_row">
+    <div class="row mobile-padding-top-bottom-2_5 padding-top-bottom-2_5 value_row about_value_row">
 
 
-      <div class="col-2 mobile-col-0"></div>
+      <div class="col-1 mobile-col-0"></div>
 
-      <div class="col-9 mobile-col-12 mobile-margin-left-2_5 value_col">
+      <div class="col-10 mobile-col-12 mobile-margin-left-2_5 value_col">
 
-        <div class="row mobile-margin-top-2_5">
+        <div class="row mobile-margin-top-2_5 margin-top-5">
 
-          <div class='col-3 mobile-col-4 landscape-col-3'>
+            <div class="col-3">
 
-            <img class='width-100' src="./assets/images/elements_1.png"/>
 
-            <h6 class="mobile-font-18 landscape-font-16 a bold akrobat font-25 text-center ">
-              Detailed Cleaning
-            </h6>
+                <div class="value_box">
+                    <i class="value_icon icon-basic-heart "></i>
+                    <p class="value_box_title">
+                        We Care About the Planet
+                    </p>
+                    <p class="value_box_subtitle">
+                        We Care About the Planet
+                          We Care About the Planet
+                            We Care About the Planet
+                              We Care About the Planet
+                                We Care About the Planet  We Care About the Planet
 
-            <p class="mobile-font-16  akrobat font-18 margin-left-2_5 text-center desktop_visible_only">
-              A business that looks well maintained is successful.
-              Our company specializes in cleaning windows to lessen you
-            </p>
+                    </p>
+                </div>
 
-          </div>
 
-          <div class="col-1"></div>
+            </div>
 
-          <div class='col-3 mobile-col-4 landscape-col-3'>
+            <div class="col-3">
 
-            <img class='width-100' src="./assets/images/elements_2.png"/>
 
-            <h6 class="mobile-font-18 landscape-font-16 a bold akrobat font-25 text-center ">
-              Green Friendly
-            </h6>
+                <div class="value_box">
+                    <i class="value_icon icon-basic-cloud "></i>
+                    <p class="value_box_title">
+                        We Care About the Planet
+                    </p>
+                    <p class="value_box_subtitle">
+                        We Care About the Planet
+                          We Care About the Planet
+                            We Care About the Planet
+                              We Care About the Planet
+                                We Care About the Planet  We Care About the Planet
 
-            <p class="mobile-font-16 krobat font-18 text-center desktop_visible_only">
-              A business that looks well maintained is successful.
-              Our company specializes in cleaning windows to lessen you
-            </p>
+                    </p>
+                </div>
 
-          </div>
 
-          <div class="col-1"></div>
+            </div>
 
-          <div class='col-3 mobile-col-4 landscape-col-3'>
+            <div class="col-3">
 
-            <img class='width-100' src="./assets/images/elements_3.png"/>
-            <h6 class="mobile-font-18  landscape-font-16  bold akrobat font-25 margin-left-2_5 text-center">
-              48 Hour Raincheck
-            </h6>
 
-            <p class="mobile-font-16 akrobat font-18 margin-left-2_5 text-center desktop_visible_only ">
-              A business that looks well maintained is successful.
-              Our company specializes in cleaning windows to lessen you
-            </p>
+                <div class="value_box">
+                    <i class="value_icon icon-basic-world "></i>
+                    <p class="value_box_title">
+                        We Care About the Planet
+                    </p>
+                    <p class="value_box_subtitle">
+                        We Care About the Planet
+                          We Care About the Planet
+                            We Care About the Planet
+                              We Care About the Planet
+                                We Care About the Planet  We Care About the Planet
 
-          </div>
+                    </p>
+                </div>
+
+
+            </div>
+
+            <div class="col-3">
+
+
+                <div class="value_box">
+                    <i class="value_icon icon-basic-gear "></i>
+                    <p class="value_box_title">
+                        We Care About the Planet
+                    </p>
+                    <p class="value_box_subtitle">
+                        We Care About the Planet
+                          We Care About the Planet
+                            We Care About the Planet
+                              We Care About the Planet
+                                We Care About the Planet  We Care About the Planet
+
+                    </p>
+                </div>
+
+
+            </div>
 
         </div>
 
