--- a/views/user/layout/home/contact.ejs
+++ b/views/user/layout/home/contact.ejs
@@ -1,4 +1,4 @@
-
+<!--
 <div class="showboxcontact relative margin-top-10 width-100">
       <div class="blueboxcontact2  absolute background-006 width-20 z-3"></div>
       <div class="blueboxcontact2 margin-top-7_5-neg right-20 background-005"></div>
@@ -15,4 +15,4 @@
 
       </div>
 
-    </div>
+    </div> -->
