--- a/views/user/layout/out_clients.ejs
+++ b/views/user/layout/out_clients.ejs
@@ -1,4 +1,4 @@
-<div class="white-background padding-5 padding-top-2_5 width-100 padding-bottom-5">
+<!-- <div class="white-background padding-5 padding-top-2_5 width-100 padding-bottom-5">
 
     <div class="row width-50 p_row absolute">
       <div class="mobile-col-0"></div>
@@ -11,7 +11,7 @@
 
   <div class="row padding-2 margin-top-5 padding-bottom-5 width-100  mobile-padding-top-25 contact_us_con client_row mobile-90-5">
 
-      <% for(var i = 0; i < clients.length; i++){ %>
+      <% for(var i = 0; i < clients.length; i++){ %> %>
 
           <div class="col-3 mobile-col-12 landscape-col-4 margin-top-2_5" >
 
@@ -35,4 +35,4 @@
 
   </div>
 
-</div>
+</div> -->
