--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -1,4 +1,75 @@
 
+.about_container{
+  height:50vh;
+}
+.about_value_row{
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(37, 98, 159, .7),
+      rgba(56, 182, 255, .7)),
+      url("./../images/wet.png");
+  background-size: cover;
+  height:90vh;
+  max-height:90vh;
+
+}
+.value_box:hover{
+  transform: scale(1.1) translateY(-20px);
+  transition: all .3s;
+  background:  rgba(56, 182, 255,1);
+}
+.value_box:hover p{
+  color:white !important;
+
+}
+.value_box:hover .value_icon{
+      background-image: linear-gradient(
+      to right bottom,
+      rgba(255, 255, 255, .7),
+      rgba(255, 255, 255, .7)),
+      url("./../images/wet.png");
+      color:transparent;
+      -webkit-background-clip: text;
+      display:inline-block;
+      transition: all .5;
+      display: inline-block;
+}
+.value_box_title{
+  font-family:"Akrobat";
+  font-size:2rem;
+  display: inline-block;
+}
+.value_box_subtitle{
+  font-family:"Akrobat";
+  font-size:1.3rem;
+  display: inline-block;
+  margin-top:5%;
+}
+.value_box{
+  padding:5%;
+  transform: scale(1) translateY(0px);
+  transition: all .3s;
+  width:100%;
+  height:50vh;
+  background:rgba(255, 255, 255,.7);
+  box-shadow: 0rem 2rem 4rem black;
+  margin-top:10%;
+  text-align:  center;
+}
+
+.value_icon{
+  font-size:6rem;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(37, 98, 159, .7),
+      rgba(56, 182, 255, .7)),
+      url("./../images/wet.png");
+      color:transparent;
+      -webkit-background-clip: text;
+      display:inline-block;
+      transition: all .5;
+  display: inline-block;
+}
 
 @media screen and (max-width:1000px){
 
