--- a/views/admin/layout/head.ejs
+++ b/views/admin/layout/head.ejs
@@ -19,7 +19,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@1,600&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
 
-    <style>body{background:white !important}</style>
 
     <link rel="stylesheet" type="text/css" href="./../assets/css/contact.css" />
     <link rel="stylesheet" type="text/css" href="./../assets/css/cfs_modal.css" />
@@ -35,8 +34,10 @@
     <link rel="stylesheet" type="text/css" href="./../assets/css/general.css" />
     <link rel="stylesheet" type="text/css" href="./../assets/css/admin_home.css" />
 
+    <style>body{background:white !important}html{overflow-x: hidden}</style>
+
     <title>Admin Page</title>
 
   </head>
-  
+
   <body>
