--- a/views/admin/layout/quotes/total_quotes.ejs
+++ b/views/admin/layout/quotes/total_quotes.ejs
@@ -1,4 +1,6 @@
+
 <div class="row">
+
 
   <div class="col-12">
 
@@ -6,14 +8,13 @@
           <p class="title_quote">Total Quotes </p>
           <p class="subtitle_quote"> <%= quotes.length %> Quotes </p>
       </div>
-      
+
   </div>
 
   <div class="col-12 margin-top-20">
-
       <div class="text_quote_box width-100">
-          <p class="title_quote">Potential Sales </p>
-          <p class="subtitle_quote">Total Quotes </p>
+          <p class="title_quote"> Potential Sales </p>
+          <p class="subtitle_quote">$<%=total_potential_sales %> </p>
       </div>
 
     </div>
