--- a/views/user/layout/new_showcase.ejs
+++ b/views/user/layout/new_showcase.ejs
@@ -4,11 +4,11 @@
 
       <div class="col-4 no-pad relative no-background z-99 logo_col">
 
-          <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 logo_container light-blue-background">
+          <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 logo_container light-blue-background" >
             <img src = "./assets/images/logo.png"class="width-100" />
           </div>
 
-          <div class="background width-50 text-container turquoise-background margin-left-2_5 height-712px mobile-height-600px absolute top--5">  </div>
+          <div class="background width-50 text-container turquoise-background margin-left-2_5 height-712px mobile-height-600px absolute top--5"style="height:73vh">  </div>
 
       </div>
 
@@ -39,7 +39,7 @@
     </div>
 
   <div class="showcase_image_container">
-      <img src ='<%= showcase.showcase_img %>' class="width-100 showcase_image" id="mobile_showcase"/>
+      <img src ='<%= showcase.showcase_img %>' class="width-100 showcase_image" style="height:100vh" id="mobile_showcase"/>
   </div>
 
 </div>
