--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -34,6 +34,9 @@
       transition: all .5;
       display: inline-block;
 }
+.what_we_do_description{
+  font-size:2rem;
+}
 .value_box_title{
   font-family:"Akrobat";
   font-size:2rem;
@@ -56,7 +59,9 @@
   margin-top:10%;
   text-align:  center;
 }
-
+.normal_link{
+  display: inline;
+}
 .value_icon{
   font-size:6rem;
   background-image: linear-gradient(
