--- a/views/user/layout/about/what_we_do.ejs
+++ b/views/user/layout/about/what_we_do.ejs
@@ -10,20 +10,20 @@
 
             <p class="what_we_do_title white padding-top-10 font-70 text-left akrobat bold mobile-font-30"> What We Do </p>
 
-              <p class="what_we_do_description font-25 white text-left padding-top-5 akrobat mobile-font-18">
+              <p class="what_we_do_description  white text-left padding-top-5 akrobat mobile-font-18">
                   A business that looks well maintained is successful. Our company specializes in cleaning windows and patios to lessen your workload while making your business aesthetic look in top shape. Our services will be cost-effective to you and we are very flexible in our scheduling so we can come at the best days for you.  Once you hire us, you can trust we will fully take care of any problem and spend time around the clock to make sure you can spend time on the things that matter the most.
               </p>
 
               <div class="row margin-top-5">
-                  <div class="col-3 mobile-col-6">
+                  <div class="col-4 mobile-col-6">
                       <a href="/quote"class="normal_link"><p class="link_about border-bottom-light-red padding-top-5 akrobat width-80 font-20 white text-center" > Free Quote </p></a>
                   </div>
 
-                  <div class="col-3 mobile-col-6">
+                  <div class="col-4 mobile-col-6">
                       <a href="/#our_clients">  <p class="link_about border-bottom-light-red paddin-bottom-5 text-center padding-top-5 akrobat width-80 font-20 white  "> Contact Us </p></a>
                   </div>
 
-                  <div class="col-3 mobile-col-6">
+                  <div class="col-4 mobile-col-6">
                     <a href="/#our_clients"class="normal_link"><p class="link_about border-bottom-light-red paddin-bottom-5 text-center padding-top-5 akrobat width-80 font-20 white "> Our Work </p></a>
                   </div>
 
