--- a/views/user/layout/quote_form.ejs
+++ b/views/user/layout/quote_form.ejs
@@ -1,5 +1,5 @@
 
-<div class="absolute width-30 mobile-width-80 z-99 white-background padding-2 mobile-padding-5 home_quote_container">
+<div class="absolute mobile-width-80 z-99 white-background padding-2 mobile-padding-5 home_quote_container">
 
   <div class="row">
 
@@ -13,7 +13,7 @@
 
               <div class="row padding-bottom-5">
 
-                  <div class="col-12 padding-top-5">
+                  <div class="col-6 padding-top-5">
 
                       <label>
                           Full Name
@@ -21,19 +21,33 @@
 
                       <input class="form-control quote_input akrobat no-radius black-bottom-border font-20 no-border" name="firstName" placeholder="Enter first name" />
 
+                      <label>
+                          Address
+                      </label>
+
+                      <input class="form-control quote_input akrobat no-radius black-bottom-border font-20 no-border" name="address" placeholder="Enter Address" />
+                      <label>
+                          Zip Code
+                      </label>
+                      <input class="form-control quote_input akrobat no-radius black-bottom-border font-20 no-border" type="number"name="address" placeholder="Enter Zip Code" />
+
+
                   </div>
 
-                  <div class="col-6 padding-top-5">
-
-                    <label>
-                        Screen Count
-                    </label>
-
-                    <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="screenCount" placeholder="Screen Count" />
-
-                  </div>
 
                   <div class="col-6 padding-top-5">
+                    <div class="row">
+
+                      <div class="col-4">
+                        <label>
+                            Screen Count
+                        </label>
+
+                        <input class="form-control quote_input no-border black-bottom-border no-radius akrobat font-20"  type="number" name="screenCount" placeholder="Screen Count" />
+
+                      </div>
+
+                  <div class="col-4">
 
                     <label>
                         < 4X4 Ft
@@ -43,7 +57,7 @@
 
                   </div>
 
-                  <div class="col-6 padding-top-5">
+                  <div class="col-4">
 
                     <label>
                         4X4 to 8X8 Ft
@@ -53,7 +67,7 @@
 
                   </div>
 
-                  <div class="col-6 padding-top-5">
+                  <div class="col-4 padding-top-5">
 
                       <label>
                           > 8X8 Ft
@@ -70,13 +84,14 @@
                   <div class="col-3"></div>
 
                 <div class="col-12 ">
-                  <button class="width-100 margin-top-10 margin-bottom-5 btn white black-background"type="submit"> Receive Quote</button>
+                  <button class="width-100 margin-top-10 margin-bottom-5 btn white black-background quote_submit_button"type="submit"> Receive Quote</button>
                 </div>
 
                 <div class='col-3'></div>
 
               </form>
 
+           </div>
            </div>
 
       </div>
