--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -14,7 +14,9 @@
       </div>
 
       <%- include("./layout/contact/meet_the_owners.ejs") %>
-      <div class="our_clients_contact_wrapper">
+      <div class="our_clients_contact_wrapper relative">
+        <img class = "wave_contact_img" src = "./../assets/images/wave_l.png"/>
+
         <%- include("./layout/our_clients.ejs") %>
       </div>
 
