--- a/views/user/layout/about/values.ejs
+++ b/views/user/layout/about/values.ejs
@@ -1,12 +1,12 @@
 
-    <div class="row mobile-padding-top-bottom-2_5 padding-top-bottom-2_5 value_row about_value_row">
+    <div class="row value_row about_value_row">
 
 
       <div class="col-1 mobile-col-0"></div>
 
-      <div class="col-10 mobile-col-12 mobile-margin-left-2_5 value_col">
+      <div class="col-10 mobile-col-12 value_col">
 
-        <div class="row mobile-margin-top-2_5 margin-top-5">
+        <div class="value_inner_row row ">
 
             <div class="col-3">
 
