--- a/views/user/layout/new_showcase.ejs
+++ b/views/user/layout/new_showcase.ejs
@@ -1,27 +1,27 @@
-<div class="relative mobile-top-35px">
+<div class="showcase_container">
 
-  <div class="row relative">
+  <div class="row">
 
-      <div class="col-4 no-pad relative no-background z-99 logo_col">
+      <div class="col-4 logo_col">
 
-          <div class=" foreground width-50 padding-left-2_5 margin-left-2_5 logo_container light-blue-background" >
+          <div class="logo_container light-blue-background" >
             <img src = "./assets/images/logo.png"class="width-100" />
           </div>
 
-          <div class="background width-50 text-container turquoise-background margin-left-2_5 height-712px mobile-height-600px absolute top--5"style="height:73vh">  </div>
+          <div class="showcase_background turquoise-background">  </div>
 
       </div>
 
   </div>
 
-      <div class="intro-text-container width-80">
+      <div class="intro-text-container ">
 
-          <div class="padding-1 big-text-container-ani-1 mobile-width-80 margin-top-2_5 width-45 cfs-heading-background">
-                <p class="font-35 akrobat margin-top-2_5 margin-left-2_5 bold no-space white mobile-font-25"><%= showcase.heading_1 %></p>
+          <div class="cfs-heading-background cfs-heading-background--1">
+                <p class="cfs-heading"><%= showcase.heading_1 %></p>
           </div>
 
-            <div class="padding-1 big-text-container-ani-2 mobile-width-110 margin-top-2_5 width-75 cfs-heading-background" >
-                <p class="font-35 akrobat margin-top-2_5 margin-left-2_5 bold no-space white mobile-font-25"><%= showcase.heading_2 %></p>
+            <div class="cfs-heading-background cfs-heading-background--2" >
+                <p class="cfs-heading"><%= showcase.heading_2 %></p>
             </div>
 
         <div class="banners row relative">
