--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,19 +1,50 @@
-
+.home_page{
+  padding-bottom:75%;
+}
 .intro-row{
   top:65%;
   left:-5%;
 }
+.value_row{
+  position:relative;
+}
 .supportbox{
   left:10% !important;
 }
-.about_us{
+.gallery_home_container{
+  height:100vh;
+}
+.values_row_dropdown{
+  padding:1% 5%;
+  padding-top:5%;
+  width:90%;
+  margin-left:5%;
+  padding-left:5%;
+  margin-top:1%;
+
+}
+.values_row_heading{
+  font-family: "Akrobat";
+  font-size:3.5rem;
+  padding-left:2.5%;
+  color:white;
+
+}
+.about_us_container{
   margin-top:30%;
+}
+.footer_home_container{
+  top:-50vh;
+  position:relative;
 }
 .about_image{
   top:0% !important;
 }
 .p_row{
   left:0%;
+}
+.margin-top-medium{
+  margin-top:10%;
 }
 
 .big_blue_box_about{
@@ -22,7 +53,7 @@
   height:800px;
 }
 .home_quote_container{
-  top:20%;
+  top:25%;
   left:5%;
 }
 .value_row_text{
@@ -43,12 +74,26 @@
   display: inline;
   background:#1670A4;
 }
-.about-us-title{
+.contact_section_title{
   margin-top:5%;
+  font-size:6rem;
+  display:inline;
+  padding:1%;
+  margin-bottom:5%;
+  color:white;
+  width:50%;
+  padding-left:2.5%;
+  position:absolute;
+  top:10%;
+  left:0%;
 }
 .contact_section{
-  margin-top:-2.5%;
-}
+    margin-top:-2.5%;
+    padding:5%;
+    position:relative ;
+    height:32rem;
+    width:100%
+  }
 .value_row_image{
   height:75vh;
   width:100%;
@@ -73,7 +118,12 @@
 
 .wave{
   height:300px;
+  position: relative;
+  width:100%;
+  z-index:999;
+
 }
+
 
 .our_work_section{
   width:105%;
@@ -91,17 +141,24 @@
   background:url("./../images/wave.png");
   background-repeat:no-repeat;
 }
-
+.our_clients_container{
+  margin-top:-5%;
+}
 .showimg{
   height:100%;
   height:600px;
   margin-top:20%;
 }
 
-.blueboxcontact{
+.contact_section_bluebox{
   top:0%;
   left:-5%;
   height:300px;
+  z-index:-1;
+  width:30%;
+  top:0%;
+  height:100%;
+  position:absolute;
 }
 
 
@@ -158,16 +215,30 @@
   visibility: visible;
   animation: .5s ease-in dropdown 1;
 }
+.contact_info_section--number {
+  display:block;
+  padding:1%;
+
+  text-align:left;
+  width:50%;
+
+}
 .contact_info_section{
-  padding-top: 10%;
+
+  padding:2.5% 0;
+  line-height:1.5;
+  background:white;
+  width:100%;
+  position:relative;
   margin-top: -2.5%;
 }
+
 .text-about-us-box_4{
   position: relative;
   z-index:99999;
 }
 .home_quote_container{
-  top:12.5%;
+  top:15%;
   width:80%;
   left:5%;
   box-shadow: 0rem 2rem 5rem rgba(0,0,0,.5);
@@ -185,13 +256,84 @@
 .wavy_section{
   bottom: 50px;
 position: relative;
+width:100%;
 }
-.values_row{
+
+.our_work_section{
+  background:white;
+  position:relative;
+}
+.value_row_dropdown_text{
+  font-family: "Akrobat";
+  font-size:2rem;
+
+}
+.text_about_us_link{
+  padding-top:5%;
+  font-family: "Akrobat";
+  text-align: center;
+  font-size:3.5rem;
+  color:white;
+
+}
+.text_about_us_button{
+  padding:2%;
+  width:90%;
+  text-align: center;
+  margin-top:10%;
+  margin-left:5%;
+  padding-left:5% ;
+  margin-top:1%;
+  position:relative;
+  z-index:9999
+}
+
+.contact_info_section--email{
+  text-align: left;
+  width:80%;
+  font-size:2rem;
+}
+.dropdown_arrow{
+  width:50%;
+  margin-left:25%;
+}
+.dropdown_container{
+  padding-bottom:5%;
   margin-top:2.5%;
 }
+
+.gallery_col{
+  padding:0;
+  margin:0;
+}
+
+.gallery_img{
+  height:50vh;
+  width:100%;
+}
+.gallery_img--big{
+  height:100vh;
+  width:100%;
+}
+
+.gallery_row--2{
+  position:relative;top:-50vh
+}
+
+.gallery_row--3{
+  position:relative;top:-50vh
+}
+
+
+
+
+
 @media screen and (max-width:1000px){
 .contact_us_con{
   margin-top:5% !important;
+}
+.our_work_section{
+  margin-top:35%;
 }
   .mobile-margin-top-20-neg{
     width:110% !important;
@@ -298,6 +440,34 @@ position: relative;
   .mobile_text_banner_out_clients{
     font-size:45px !important;
   }
+  .our_clients_container{
+    margin-top:-20%;
+  }
+  .contact_us_title{
+    font-size:3.5rem;
+    width:100%;
+    text-align:center;
+    margin-top:10%;
+  }
+  .contact_info_section--number{
+    margin-top:-5%;
+    width:80%;
+    font:2.5rem;
+  }
+  .contact_info_section--email{
+    margin-top:-5%;
+    width:90%;
+    font:2rem;
 
+  }
+  .value_row{
+    margin-top:10%;
+  }
+  .values_row_heading{
+    font-size:3rem;
+  }
 
+.text_about_us_link{
+  font-size:2rem;
+}
 }
