--- a/views/user/layout/home/gallery.ejs
+++ b/views/user/layout/home/gallery.ejs
@@ -1,41 +1,37 @@
-<div class="row ">
 
-    <div class="padding-0 margin-0 col-4 ">
-        <img class="width-100" src = './assets/images/photo_1.png' style="height:100vh"/>
-    </div>
-    <div class="padding-0 margin-0 col-4 ">
-        <img class="width-100" src = './assets/images/photo_2.png' style="height:50vh"/>
-    </div>
-    <div class="padding-0 margin-0 col-4 ">
-        <img class="width-100" src = './assets/images/photo_3.png' style="height:50vh"/>
-    </div>
+<div class="row gallery_row--1">
 
-
+    <div class="gallery_col col-4 ">
+        <img class="width-100 gallery_img--big" src = './assets/images/photo_1.png' style="height:100vh"/>
+    </div>
+    <div class="gallery_col col-4 ">
+        <img class="width-100 gallery_img" src = './assets/images/photo_2.png' />
+    </div>
+    <div class="gallery_col col-4 ">
+        <img class="gallery_img" src = './assets/images/photo_3.png' />
+    </div>
 
 </div>
-<div class="row " style="position:relative;top:-50vh">
 
-    <div class="padding-0 margin-0 col-4 ">
-    </div>
+
+<div class="row gallery_row--2 ">
+
+    <div class="gallery_col col-4 "></div>
+
     <div class="padding-0 margin-0 col-8 ">
-        <img class="width-100" src = './assets/images/photo_4.png' style="height:50vh"/>
+        <img class="gallery_img" src = './assets/images/photo_4.png' />
     </div>
-
-
-
 
 </div>
-<div class="row " style="position:relative;top:-50vh">
 
-    <div class="padding-0 margin-0 col-6 ">
-      <img class="width-100" src = './assets/images/photo_5.png' style="height:50vh"/>
+<div class="row gallery_row--3 ">
 
-    </div>
-    <div class="padding-0 margin-0 col-6 ">
-        <img class="width-100" src = './assets/images/photo_6.png' style="height:50vh"/>
+    <div class="gallery_col col-6 ">
+      <img class="gallery_img" src = './assets/images/photo_5.png' />
     </div>
 
-
-
+    <div class="gallery_col col-6 ">
+        <img class="gallery_img" src = './assets/images/photo_6.png' />
+    </div>
 
 </div>
