--- a/views/user/layout/quote/before_and_after.ejs
+++ b/views/user/layout/quote/before_and_after.ejs
@@ -1,41 +1,20 @@
-<div class="margin-top-2_5 padding-bottom-5 mobile-margin-top-10 landscape-margin-top-2_5">
-  <p class="before_after_title text-banner mobile-width-80">Our Work </p>
+<div class='width-100'>
 
-  <div class="row margin-top-5 mobile-margin-top-10 landscape-margin-top-5">
-      <div class="col-1 no-col"></div>
-      <div class="col-10 mobile-col-11">
-        <div class="row">
-          <div class="col-6 darker-navy-background">
-             <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 no-border-bottoms" >Before </p>
-          </div>
-          <div class='col-6 dark-navy-background'>
-            <p class="akrobat white text-center font-25 padding-top-2_5 padding-bottom-2_5 no-border-bottoms" >After </p>
-          </div>
-        </div>
-      </div>
-   </div>
-    <div class="row">
 
-  <div class="col-1 no-col"></div>
-
-  <div class="col-10 mobile-margin-left-2_5 mobile-col-11">
         <% if(before_and_after_images.length >0){%>
+
           <% for(let images of before_and_after_images) { %>
-            <div class="row">
 
-                <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 darker-navy-background padding-5 x_before_box">
-                    <img class=" width-100 height-100 relative" src ="<%= images.before %>" />
-                </div>
-                <div class="col-6 relative margin-top-2_5 mobile-margin-top-0 dark-navy-background padding-5 x_after_box" >
-                    <img class=" width-100 height-100" src ="<%= images.after %>"  />
-                </div>
-            </div>
+
+
+                  <img class=" width-100 height-100 relative" src ="<%= images.before %>" />
+                  <img class=" width-100 height-100" src ="<%= images.after %>"  />
+
+
           <%}%>
+
         <%}%>
-    </div>
 
 
-
-</div>
 
 </div>
